--- a/tensorflow_tutorial.ipynb
+++ b/tensorflow_tutorial.ipynb
@@ -256,9 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "acquired-syndrome",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -278,7 +280,7 @@
        "        9.880056  ]], dtype=float32)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,36 +293,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "wound-illness",
+   "metadata": {},
+   "source": [
+    "## 下面的代码中定义了两个变量的权重和偏置。权重变量使用正态分布随机初始化，均值为 0，标准差为 2，权重大小为 100×100。偏置由 100 个元素组成，每个元素初始化为 0。在这里也使用了可选参数名以给计算图中定义的变量命名："
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "changed-gospel",
+   "execution_count": 25,
+   "id": "enabling-advocate",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = tf.Variable(tf.random_normal([100,100], stddev=2),name=\"w1\")\n",
+    "bias = tf.Variable(tf.zeros([100]), name='biases')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "combined-aircraft",
+   "metadata": {},
+   "source": [
+    "## 在前面的例子中，都是利用一些常量来初始化变量，也可以指定一个变量来初始化另一个变量。下面的语句将利用前面定义的权重来初始化 weight2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "mediterranean-conservative",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights2 = tf.Variable(weights.initialized_value(), name=\"w2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "otherwise-timing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#初始化变量\n",
+    "intial_op = tf.global_variables_initializer()\n",
+    "#单独初始化\n",
+    "sess.run(bias.initializer)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "amino-trail",
+   "metadata": {},
+   "source": [
+    "## 保存变量：使用 Saver 类来保存变量，定义一个 Saver 操作对象："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "increasing-house",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saver = tf.train.Saver()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "separated-saturn",
+   "metadata": {},
+   "source": [
+    "## 最重要的元素——占位符，它们用于将数据提供给计算图。可以使用以下方法定义一个占位符："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "muslim-grove",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 64K\r\n",
-      "drwxr-xr-x.  4 root root   94 2月  16 19:26 .\r\n",
-      "dr-xr-x---. 28 root root 4.0K 2月  16 17:33 ..\r\n",
-      "-rw-r--r--.  1 root root  38K 2月  16 17:31 a.ipynb\r\n",
-      "drwxr-xr-x.  2 root root   25 2月  16 19:09 images\r\n",
-      "drwxr-xr-x.  2 root root   76 2月  16 17:44 .ipynb_checkpoints\r\n",
-      "-rw-r--r--.  1 root root  18K 2月  16 19:26 tensorflow_tutorial.ipynb\r\n"
+      "[[ 70.38283   27.992472  45.840763  79.86158   22.491531]\n",
+      " [ 54.486397  15.152184 101.72976   92.544075 107.312546]\n",
+      " [ 83.25981  115.332436 115.12639  100.47626   20.552662]\n",
+      " [ 19.778744  97.922455  57.20612   37.91439   18.696201]]\n"
      ]
     }
    ],
    "source": [
-    "!ls -alh"
+    "x = tf.placeholder(\"float\", name=\"xxx\")\n",
+    "y = 12 * x\n",
+    "data = tf.random_uniform([4,5],10)\n",
+    "with tf.Session() as sess:\n",
+    "    x_data = sess.run(data)\n",
+    "    print(sess.run(y, feed_dict={x:x_data}))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "following-mouse",
+   "id": "foreign-symbol",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in tf.range(10):\n",
+    "    [r]"
+   ]
   }
  ],
  "metadata": {
