--- a/tensorflow_tutorial.ipynb
+++ b/tensorflow_tutorial.ipynb
@@ -10,12 +10,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "ignored-glass",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:493: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:494: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:495: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:496: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:497: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:502: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -25,11 +43,47 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "meaningful-anderson",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:493: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:494: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:495: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:496: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:497: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:502: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the exciting world of Deep Neural Networks!\n"
+     ]
+    }
+   ],
+   "source": [
     "message = tf.constant('Welcome to the exciting world of Deep Neural Networks!')\n",
     "with tf.Session() as sess:\n",
-    "    print(sess.run(message).decode())\n",
-    "sess = tf.Session()"
+    "    print(sess.run(message).decode())"
    ]
   },
   {
@@ -92,26 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "interpreted-person",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0]], dtype=int32)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "zero_t = tf.zeros([3,4],tf.int32)\n",
-    "sess.run(zero_t)"
+    "with tf.Session() as sess:\n",
+    "    sess.run(zero_t)"
    ]
   },
   {
@@ -124,13 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "outside-remains",
    "metadata": {},
    "outputs": [],
    "source": [
     "ones_t = tf.ones([2,3],tf.int32)\n",
-    "sess.run(ones_t)"
+    "with tf.Session() as sess:\n",
+    "    sess.run(ones_t)"
    ]
   },
   {
@@ -143,13 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "interracial-essex",
    "metadata": {},
    "outputs": [],
    "source": [
     "range_t = tf.linspace(2.0,15.0,5)\n",
-    "sess.run(range_t)"
+    "with tf.Session() as sess:\n",
+    "    sess.run(range_t)"
    ]
   },
   {
@@ -162,10 +206,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "czech-awareness",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Attempted to use a closed Session.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-255314ae9ede>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mrange_t\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange_t\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    893\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 895\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    896\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1051\u001b[0m     \u001b[0;31m# Check session.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1052\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_closed\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1053\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Attempted to use a closed Session.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1054\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1055\u001b[0m       raise RuntimeError('The Session graph is empty.  Add operations to the '\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Attempted to use a closed Session."
+     ]
+    }
+   ],
    "source": [
     "range_t = tf.range(10)\n",
     "sess.run(range_t)"
@@ -181,22 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "checked-sheffield",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-31.663136 ,  96.49774  ,  10.819015 ],\n",
-       "       [-76.44008  ,  -6.5275383,  33.195168 ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t_random = tf.random_normal([2,3], mean=12.0, stddev=100 , seed=12)\n",
     "sess.run(t_random)"
@@ -212,22 +258,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ancient-capture",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 151.85995 ,  -17.988905,   79.422134],\n",
-       "       [-146.7453  , -115.33358 ,  168.8891  ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#很多时候需要以随机的顺序来呈现训练样本，可以使用 tf.random_shuffle() 来沿着它的第一维随机排列张量。如果 t_random 是想要重新排序的张量，使用下面的代码：\n",
     "t_random_shuffle = tf.random_shuffle(t_random)\n",
@@ -256,35 +290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "acquired-syndrome",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.0086262 , 9.701668  , 8.487642  , ..., 4.014183  , 4.2018986 ,\n",
-       "        6.0311484 ],\n",
-       "       [1.6479492 , 2.5117612 , 8.651404  , ..., 3.8982236 , 1.9020462 ,\n",
-       "        2.1089745 ],\n",
-       "       [0.5706465 , 5.807663  , 7.647709  , ..., 6.8128204 , 6.302782  ,\n",
-       "        2.469287  ],\n",
-       "       ...,\n",
-       "       [4.303278  , 9.856594  , 8.3518715 , ..., 1.6166127 , 5.4081845 ,\n",
-       "        3.8831007 ],\n",
-       "       [7.8500056 , 0.83293796, 3.787043  , ..., 7.4345884 , 9.469841  ,\n",
-       "        1.8955421 ],\n",
-       "       [2.594589  , 7.143749  , 3.7885928 , ..., 7.219738  , 2.5857759 ,\n",
-       "        9.880056  ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rand_t = tf.random_uniform([50,50], 0,10,seed=0)\n",
     "t_a = tf.Variable(rand_t)\n",
@@ -294,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wound-illness",
+   "id": "optical-burst",
    "metadata": {},
    "source": [
     "## 下面的代码中定义了两个变量的权重和偏置。权重变量使用正态分布随机初始化，均值为 0，标准差为 2，权重大小为 100×100。偏置由 100 个元素组成，每个元素初始化为 0。在这里也使用了可选参数名以给计算图中定义的变量命名："
@@ -302,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "enabling-advocate",
+   "execution_count": null,
+   "id": "available-template",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "combined-aircraft",
+   "id": "congressional-arabic",
    "metadata": {},
    "source": [
     "## 在前面的例子中，都是利用一些常量来初始化变量，也可以指定一个变量来初始化另一个变量。下面的语句将利用前面定义的权重来初始化 weight2"
@@ -321,8 +332,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "mediterranean-conservative",
+   "execution_count": null,
+   "id": "spatial-commissioner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,8 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "otherwise-timing",
+   "execution_count": null,
+   "id": "polished-porter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amino-trail",
+   "id": "lesser-binary",
    "metadata": {},
    "source": [
     "## 保存变量：使用 Saver 类来保存变量，定义一个 Saver 操作对象："
@@ -352,8 +363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "increasing-house",
+   "execution_count": null,
+   "id": "fifteen-championship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "separated-saturn",
+   "id": "dated-vegetation",
    "metadata": {},
    "source": [
     "## 最重要的元素——占位符，它们用于将数据提供给计算图。可以使用以下方法定义一个占位符："
@@ -370,21 +381,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "muslim-grove",
+   "execution_count": null,
+   "id": "sustained-diagnosis",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 70.38283   27.992472  45.840763  79.86158   22.491531]\n",
-      " [ 54.486397  15.152184 101.72976   92.544075 107.312546]\n",
-      " [ 83.25981  115.332436 115.12639  100.47626   20.552662]\n",
-      " [ 19.778744  97.922455  57.20612   37.91439   18.696201]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = tf.placeholder(\"float\", name=\"xxx\")\n",
     "y = 12 * x\n",
@@ -397,13 +397,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "foreign-symbol",
+   "id": "overhead-badge",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in tf.range(10):\n",
-    "    [r]"
+    "with tf.Session() as sess:\n",
+    "    for i in sess.run(tf.range(10)):\n",
+    "        print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "expired-holmes",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
